Completed 1st ToDo in Main: Rework of Config to be an actual Config File and not a data store and added an app state to accommodate for it.